RESOLVED FIXED279917
[EWS] pre-existing failures in macOS - ASSERTION FAILED: didRemove in Source/WebKit/UIProcess/WebPageProxy
https://bugs.webkit.org/show_bug.cgi?id=279917
Summary [EWS] pre-existing failures in macOS - ASSERTION FAILED: didRemove in Source/...
Marta Darbinyan
Reported 2024-09-18 13:26:23 PDT
The following tests are appearing as pre-existing failure in macOS-Sonoma-Debug-WK2-Tests-EWS. The tests first started crashing on 283831@main. fast/loader/stop-provisional-loads.html http/tests/contentextensions/block-cookies-in-image-load-in-onunload.html http/tests/navigation/image-load-in-pagehide-handler.html http/tests/navigation/image-load-in-unload-handler.html http/wpt/beacon/sendBeacon-in-pagehide.html http/wpt/fetch/fetch-in-pagehide.html imported/w3c/web-platform-tests/html/cross-origin-opener-policy/reporting/navigation-reporting/report-only-from-unsafe-none.https.html imported/w3c/web-platform-tests/html/cross-origin-opener-policy/reporting/navigation-reporting/report-only-same-origin-report-to.https.html imported/w3c/web-platform-tests/html/cross-origin-opener-policy/reporting/navigation-reporting/report-only-same-origin.https.html stderr: ASSERTION FAILED: didRemove /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/Source/WebKit/UIProcess/WebPageProxy.cpp(6142) : void WebKit::WebPageProxy::endNetworkRequestsForPageLoadTiming(WebCore::FrameIdentifier, WallTime) 1 0x302300b4c WebKit::WebPageProxy::endNetworkRequestsForPageLoadTiming(WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::WallTime) 2 0x303a8fbf4 auto void IPC::callMemberFunction<WebKit::WebPageProxy, WebKit::WebPageProxy, void (WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::WallTime), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::WallTime>>(WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)(WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::WallTime), std::__1::tuple<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::WallTime>&&)::'lambda'(auto&&...)::operator()<WebCore::ProcessQualified<WTF::ObjectIdentifierGeneric<WebCore::FrameIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long, (WTF::SupportsObjectIdentifierNullState)0>>, WTF::WallTime>(auto&&...) const Link: https://build.webkit.org/results/Apple-Sonoma-Debug-AppleSilicon-WK2-Tests/283836@main%20(4091)/fast/loader/stop-provisional-loads-crash-log.txt History: https://results.webkit.org/?style=debug&flavor=wk2&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=fast%2Floader%2Fstop-provisional-loads.html&test=http%2Ftests%2Fcontentextensions%2Fblock-cookies-in-image-load-in-onunload.html&test=http%2Ftests%2Fnavigation%2Fimage-load-in-pagehide-handler.html&test=http%2Ftests%2Fnavigation%2Fimage-load-in-unload-handler.html&test=http%2Fwpt%2Fbeacon%2FsendBeacon-in-pagehide.html&test=http%2Fwpt%2Ffetch%2Ffetch-in-pagehide.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fcross-origin-opener-policy%2Freporting%2Fnavigation-reporting%2Freport-only-from-unsafe-none.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fcross-origin-opener-policy%2Freporting%2Fnavigation-reporting%2Freport-only-same-origin-report-to.https.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fcross-origin-opener-policy%2Freporting%2Fnavigation-reporting%2Freport-only-same-origin.https.html
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-18 13:27:16 PDT
EWS
Comment 2 2024-09-18 14:56:38 PDT
Test gardening commit 283872@main (f9e313d5aba0): <https://commits.webkit.org/283872@main> Reviewed commits have been landed. Closing PR #33853 and removing active labels.
Alex Christensen
Comment 3 2024-09-18 15:44:53 PDT
EWS
Comment 4 2024-09-18 19:31:02 PDT
Committed 283887@main (e22cd14e0066): <https://commits.webkit.org/283887@main> Reviewed commits have been landed. Closing PR #33860 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.