[EWS] pre-existing failures in macOS - ASSERTION FAILED: didRemove in Source/WebKit/UIProcess/WebPageProxy https://bugs.webkit.org/show_bug.cgi?id=279917 rdar://136245139

Reviewed by Ryosuke Niwa.

One of the things I said in 283819@main applies only with site isolation on.
With site isolation off we do get the WebPageProxy::didDestroyFrame message for
each destroyed frame and we should not clear the m_framesWithSubresourceLoadingForPageLoadTiming
because we will receive a message saying to remove each frame, and we want to continue
to assert that those removals each correspond with an addition.

* LayoutTests/TestExpectations:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didCommitLoadForFrame):

Canonical link: https://commits.webkit.org/283887@main